# claude-code-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  push_100_commits.sh  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DATA_FLOW.md  PACKAGES.md  SERVICES.md  TOOLS.md  contributing.md
examples/: _path_setup.py  basic_query.py  config_management.py  custom_tool.py  mcp_client.py  streaming.py  tool_usage.py
scripts/: materialize_utils_parity.py
src/claude_code/: __init__.py  context.py  cost_summary_hook.py  exceptions.py  history.py  inbound_message_context.py  input_history.py  project_onboarding_state.py  query_runner.py  session_setup_runner.py  setup.py  tasks_registry.py  tools_assembly.py
src/claude_code/analytics/: __init__.py  events.py  metadata.py
src/claude_code/assistant/: __init__.py  session_history.py
src/claude_code/auth/: __init__.py  helpers.py  types.py
src/claude_code/bootstrap/: __init__.py  state.py
src/claude_code/bridge/: __init__.py  bridge_api.py  bridge_config.py  bridge_debug.py  bridge_enabled.py  bridge_main.py  bridge_messaging.py  bridge_permission_callbacks.py  bridge_pointer.py  bridge_status_util.py  bridge_ui.py  capacity_wake.py  code_session_api.py  create_session.py  debug_utils.py  env_less_bridge_config.py  flush_gate.py  inbound_attachments.py  inbound_messages.py  init_repl_bridge.py  jwt_utils.py  poll_config.py  poll_config_defaults.py  remote_bridge_core.py  repl_bridge.py  repl_bridge_handle.py  repl_bridge_transport.py  session_id_compat.py  session_runner.py  trusted_device.py  types.py  work_secret.py
src/claude_code/buddy/: __init__.py  companion.py  sprites.py  types.py
src/claude_code/cli/: __init__.py  exit.py  io.py  main.py  ndjson_safe_stringify.py  output.py  print_mode.py  remote_io_sdk.py  structured_io_sdk.py  update_cli.py
src/claude_code/commands/: __init__.py  _fast_mode.py  _immediate.py  additional_builtin_specs.py  advisor.py  base.py  bridge_kick.py  brief_command.py  brief_ui.py  commands_manifest.py  commit_command.py  commit_push_pr.py  moved_to_plugin.py  protocols.py  registry.py  skills_telemetry.py  spec.py
src/claude_code/config/: __init__.py  config.py  types.py
src/claude_code/constants/: __init__.py  api_limits.py  betas.py  common.py  cyber_risk_instruction.py  error_ids.py  figures.py  files.py  github_app.py  keys.py  messages.py  oauth.py  output_styles.py  product.py  prompts.py  spinner_verbs.py  system.py  system_prompt_sections.py  tool_limits.py  tools.py  turn_completion_verbs.py  xml.py
src/claude_code/core/: __init__.py  context.py  cost_tracker.py  query_engine.py  query_engine_anthropic.py  tool.py  tools_registry.py
src/claude_code/cost/: __init__.py  tracker.py
src/claude_code/engine/: __init__.py  query_engine.py  types.py
src/claude_code/entrypoints/: __init__.py  init.py  main.py  mcp_launcher.py  sdk_types.py
src/claude_code/event_handlers/: __init__.py  after_first_render.py  agent_color_manager.py  agent_progress.py  api_key_verification.py  assistant_history.py  auto_mode_unavailable_notification.py  auto_scroll.py  away_summary.py  background_task_navigation.py  blink.py  bridge_connection.py  bridge_status.py  cancel_request.py  claude_ai_limits.py  clipboard_image_hint.py  command_queue.py  compact_warning.py  connection_status.py  copy_on_select.py  debug_mode.py  deferred_hook_messages.py  diff_data.py  diff_in_ide.py  direct_connect.py  double_press.py  dynamic_config.py  effort_level.py  elapsed_time.py  error_recovery.py  exit_on_ctrl_cd.py  file_history_snapshot_init.py  file_suggestions.py  history_search.py  ide_at_mentioned.py  ide_log_event_forwarder.py  ide_selection.py  inbox_poller.py  input_buffer.py  issue_flag_banner.py  (+45 more)
src/claude_code/history/: __init__.py  history.py
src/claude_code/hooks/: __init__.py  executor.py  registry.py  tool_hooks.py  types.py
src/claude_code/keybindings/: __init__.py  default_bindings.py  features.py  ink_match.py  load_user_bindings.py  match.py  parser.py  platform.py  reserved_shortcuts.py  resolver.py  schema.py  shortcut_display.py  shortcut_format.py  template.py  types.py  use_keybinding.py  use_shortcut_display.py  validate.py  validation.py
src/claude_code/mcp/: __init__.py  types.py
src/claude_code/memdir/: __init__.py  memory.py  memory_age.py  memory_types.py  paths.py  relevance.py  scan.py
src/claude_code/memory/: __init__.py  types.py
src/claude_code/migrations/: __init__.py  config.py  migrate_auto_updates_to_settings.py  model.py  records.py  (+14 more)
tests/: __init__.py  test_bridge.py  test_bridge_api_client.py  test_constants.py  test_constants_migrated.py  test_core.py  test_event_handlers_batch2.py  test_event_handlers_batch3.py  test_keybindings.py  test_migrations.py  test_mock_rate_limits.py  test_plugins_parse_args.py  test_session_memory_compact.py  test_utils.py  test_utils_critical.py  test_utils_env_more.py  test_utils_file_more.py  test_utils_git_more.py  test_utils_migration_batch.py  test_utils_remaining_migrations.py  test_utils_subprocess_more.py  test_voice_keyterms_and_tool_permission_handlers.py
tests/commands/: test_commands_batch1.py  test_export_and_brief_ui.py  test_load_symbol_modules.py
tests/integration/: __init__.py  conftest.py  test_cli_extended.py  test_cli_integration.py  test_config_loading.py  test_git_operations.py  test_integration_e2e_expanded.py  test_mcp_client_e2e.py  test_mcp_config_git_extended.py  test_mcp_transport.py  test_query_engine_api.py  test_tool_execution.py  test_tools_extended.py
tests/test_services/: __init__.py  test_analytics_first_party_logger.py  test_analytics_metadata.py  test_compact_grouping.py  test_compact_messages.py  test_mcp_string_utils.py  test_mcp_xaa_idp_login.py
tests/test_tools/: __init__.py  test_bash_tool.py  test_file_read_tool.py  test_file_write_tool.py  test_glob_tool.py  test_grep_tool.py
tests/tools/: test_critical_tools_impl.py  test_migrated_tools_aliases.py
tests/types/: test_generated_event_types.py
tests/unit/: test_context_module.py  test_exceptions.py  test_stub_wiring.py
(+1555 files in other folders)
