[project]
name = "claude-code"
version = "0.1.0"
description = "Python port of Claude Code: an AI coding assistant with query engines, pluggable tools (filesystem, shell, MCP, agents), Typer CLI, and a stdio MCP host for built-in tools."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Imran Khan" },
]
keywords = [
    "anthropic",
    "claude",
    "claude-code",
    "ai",
    "llm",
    "coding-assistant",
    "mcp",
    "model-context-protocol",
    "agent",
    "typer",
    "asyncio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "aiofiles>=24.0",
    "anyio>=4.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "json5>=0.9.0",
    "Pillow>=10.0.0",
    "packaging>=24.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
# Linters, formatters, type-checker, git hooks — use with: pip install -e ".[dev]"
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12.20241221",
    "types-aiofiles>=24.1.0.20240626",
]
# Pytest stack — use with: pip install -e ".[test]" (often combined with dev)
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5.0",
]
# Static docs site tooling (Markdown → HTML) — use with: pip install -e ".[docs]"
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
# OpenTelemetry export for optional observability
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
# Full contributor / CI toolbox (dev + test + docs + telemetry)
all = [
    "pre-commit>=3.5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12.20241221",
    "types-aiofiles>=24.1.0.20240626",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.scripts]
claude = "claude_code.cli.main:main"
claude-code-mcp = "claude_code.entrypoints.mcp_launcher:main"

[project.urls]
Homepage = "https://github.com/mimran-khan/claude-code-python"
Documentation = "https://github.com/mimran-khan/claude-code-python/tree/main/docs"
Repository = "https://github.com/mimran-khan/claude-code-python"
Issues = "https://github.com/mimran-khan/claude-code-python/issues"
Changelog = "https://github.com/mimran-khan/claude-code-python/blob/main/MIGRATION_STATUS.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
exclude = [
    ".venv",
    "build",
    "dist",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
# Ruff format owns wrapping; remaining long lines are often URLs or docstrings.
extend-ignore = [
    "E501",
    "N815",  # Pydantic / TS-mirrored field names (camelCase)
    "N802",  # JS API parity (e.g. profiler surface)
    "N806",  # Intentional ALL_CAPS locals (thresholds, limits)
    "N816",  # JS-mirrored globals (e.g. randomUUID)
    "SIM102",  # Nested ifs kept for readability
    "SIM103",  # Explicit bool returns
    "SIM105",  # try/except pass vs suppress — equivalent clarity
    "SIM112",  # macOS __CFBundleIdentifier casing
    "SIM115",  # open() without with — some lock/atomic patterns
    "B023",  # Deferred callbacks referencing loop vars — reviewed call sites
    "B904",  # raise in except without explicit chaining — large TS port surface
]

[tool.ruff.lint.per-file-ignores]
# Examples set env / sys.path before importing claude_code (intentional).
"examples/*.py" = ["E402"]
# Re-exports submodules for ``import claude_code.utils.<name>`` without listing each in ``__all__``.
"src/claude_code/utils/__init__.py" = ["F401", "F811", "I001"]
# CamelCase mirrors @ant/computer-use-mcp / Swift NAPI surface in this package.
"src/claude_code/utils/computer_use/*.py" = [
    "N802",
    "N815",
    "E501",
    "SIM105",
    "SIM112",
    "W293",
    "UP007",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.mypy]
python_version = "3.11"
# Gradual typing: full strict mode surfaces 800+ issues across the TS port; tighten per-module over time.
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
pretty = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = [
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*", "aiofiles", "aiofiles.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
]
filterwarnings = [
    "error",
    # Full-suite GC can surface unclosed asyncio/transport sockets from mocks; not tied to a single test.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
norecursedirs = [".git", ".venv", "build", "dist", "*.egg", ".mypy_cache", ".ruff_cache"]
markers = [
    "integration: end-to-end tests touching filesystem, git, or subprocess (deselect with '-m \"not integration\"')",
]
